[tool.poetry]
name = "up-bank-tracker"
version = "0.1.0"
description = ""
authors = ["qizl <izzl@protonmail.com>"]
readme = "README.md"
packages = [{include = "up_bank_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
